crates/dioform/tests/derive_contract/fail/unsupported_attribute.stderr
error: unsupported #[form(...)] attribute
 --> tests/derive_contract/fail/unsupported_attribute.rs:7:12
  |
7 |     #[form(widget = "text")]
  |            ^^^^^^
